--- a/Work/Oracle/Scux_Sie_Interface/AR应收/应收收款核销.md
+++ b/Work/Oracle/Scux_Sie_Interface/AR应收/应收收款核销.md
@@ -26,4 +26,5 @@
         - 调用**Do_Apply**会调用标准API处理接口数据
             - 调用**Ar_Receipt_Api_Pub.Apply** Oracle标准API进行收款核销
             - 根据收款核销执行的结果回写[Scux_Sie_Ar_Apply_Iface](Scux_Sie_Ar_Apply_Iface.txt)，其中字段**Scux_Process_Status**状态，成功**Gv_Completed**，失败**Gv_Error**
+        - 调用**Do_Set_Error**将错误信息推送到错误公用记录表**Scux_Sie_Interface_Errors**
 
