--- a/Work/Oracle/Scux_Sie_Interface/AR应收/应收贷项发票取消核销.md
+++ b/Work/Oracle/Scux_Sie_Interface/AR应收/应收贷项发票取消核销.md
@@ -1,7 +1,7 @@
 ## ___Scux_Sie_Ar_Unapply_Cm_Api_Pkg___
 ---
 ### ⭐***包程序***
-- [Scux_Sie_Ar_Unapply_Cm_Api_Pkg](Scux_Sie_Ar_Unapply_Cm_Api_Pkg.pck)
+- [Scux_Sie_Ar_Unapply_Cm_Api_Pkg](./link/package/Scux_Sie_Ar_Unapply_Cm_Api_Pkg.pck)
 ### ⭐***接口功能***
 - 应收贷项发票取消核销API
 ### ⭐***执行流程***
@@ -9,7 +9,7 @@
     - 1)调用**Validate_Data**验证必输入字段不能为空
     - 2)调用**Do_Insert_Process**进行数据插入
         - 使用**Scux_Sie_Ar_Unapp_Cm_Tbl**表类型接收入参
-        - 把**Scux_Sie_Ar_Unapp_Cm_Tbl**接收到的参数装填进赛意标准接口表[Scux_Sie_Ar_Unapp_Cm_Iface](Scux_Sie_Ar_Unapp_Cm_Iface.txt)
+        - 把**Scux_Sie_Ar_Unapp_Cm_Tbl**接收到的参数装填进赛意标准接口表[Scux_Sie_Ar_Unapp_Cm_Iface](./link/table/Scux_Sie_Ar_Unapp_Cm_Iface)
     - 3)调用**Do_Submit_Process**发起请求，执行并发程序<font color="red">***SCUX.应收贷项发票取消核销***</font>**SCUX_SIE_AR_UNAPPLY_CM_IMP_PKG**
   
 
@@ -17,15 +17,16 @@
 ## ___SCUX_SIE_AR_UNAPPLY_CM_IMP_PKG___
 ---
 ### ⭐***包程序***
-- [SCUX_SIE_AR_UNAPPLY_CM_IMP_PKG](Scux_Sie_Ar_Unapply_Cm_Imp_Pkg.pck)
+- [SCUX_SIE_AR_UNAPPLY_CM_IMP_PKG](./link/package/Scux_Sie_Ar_Unapply_Cm_Imp_Pkg.pck)
 ### ⭐***接口功能***
 - 标准化应收贷项发票取消核销程序主程序
 ### ⭐***执行流程***
 1. 通过上面API包的**Do_Submit_Process**发起的请求会执行本包程序的**Main**过程
-    -  1)调用**Do_Import**，贷项发票导入主程序的调用入口
-        -  通过**Do_Trim_Data**、**Validate_Data**进行数据的验证及处理
-        -  调用**Do_Process_Interface**会调用标准API处理接口数据
-            -  调用**Do_Unapply_Cm_Invoice**开始应收贷项发票取消核销流程
-                -  从核销信息表[Ar_Receivable_Applications_All](Ar_Receivable_Applications.txt)获取最近的一笔核销字段ID **Receivable_Application_Id**的值
-                -  调用Oracle标准API <font color="red"><b><u>Ar_Cm_Api_Pub.Unapply_On_Account</u></b></font>取消核销
-                    - 核销信息表[Ar_Receivable_Applications_All](Ar_Receivable_Applications.txt)和事务处理头表[Ra_Customer_Trx_All](Ra_Customer_Trx_All.txt)连接条件<font color="red"><b><u>ra.customer_trx_id = ct.customer_trx_id</u></b></font>
+    - 1)调用**Do_Import**，贷项发票导入主程序的调用入口
+        - 通过**Do_Trim_Data**、**Validate_Data**进行数据的验证及处理
+        - 调用**Do_Process_Interface**会调用标准API处理接口数据
+            - 调用**Do_Unapply_Cm_Invoice**开始应收贷项发票取消核销流程
+                - 根据核销信息表[Ar_Receivable_Applications_All](./link/table/Ar_Receivable_Applications)的<font color="pink">贷项通知单ID</font>和<font color="yellow">应收发票ID</font>获取最近的一笔核销记录（字段**Receivable_Application_Id**）。根核销记录的有无（<font color="green">有，开始取消核销</font>）决定下一步行动
+                - 调用Oracle标准API <font color="red"><b><u>Ar_Cm_Api_Pub.Unapply_On_Account</u></b></font>取消核销
+                    - 传入实参核销信息记录[Cm_Unapp_Rec_Type](./link/table/cm_unapp_rec_type)
+                    - 核销信息表[Ar_Receivable_Applications_All](./link/table/Ar_Receivable_Applications)和事务处理头表[Ra_Customer_Trx_All](./link/table/Ra_Customer_Trx_All)连接条件<font color="red"><b><u>ra.customer_trx_id = ct.customer_trx_id</u></b></font>
